--- a/Client/Pages/AccountPage/RegisterPage.razor
+++ b/Client/Pages/AccountPage/RegisterPage.razor
@@ -1,8 +1,5 @@
 ﻿@page "/identity/account/register"
-@using Client.Pages.OtherPages
-@using Syncfusion.Blazor.Popups
 @layout AuthenticationLayout
-@inject SfDialogService DialogService
 
 
 <div class="container">
@@ -95,7 +92,7 @@
 
     private async Task DisplayDialog(string content, string title)
     {
-        await DialogService.AlertAsync(content, title);
+        await dialogService.AlertAsync(content, title);
     }
 
     private async Task CheckUserAuthentication()
