--- a/Client/Pages/ContentPage/DepartmentPages/GeneralDepartmentDialog.razor
+++ b/Client/Pages/ContentPage/DepartmentPages/GeneralDepartmentDialog.razor
@@ -1,6 +1,4 @@
-﻿@using BaseLibrary.Entities
-@using Syncfusion.Blazor.Popups
-
+﻿@using Syncfusion.Blazor.Popups
 
 @inject SfDialogService dialogService
 
@@ -8,14 +6,14 @@
     <DialogEvents OnOpen="OpenDialog"></DialogEvents>
 
     <DialogTemplates>
-        <Header> Add Department</Header>
+        <Header> @Title Department</Header>
         <Content>
-            <EditForm Model="Department" Enhance OnSubmit="Save">
+            <EditForm Model="GeneralDepartment" Enhance OnSubmit="Save">
                 <div class="card border-success">
                     <div class="card-body">
                         <div class="form-group">
                             <label class="form-label">Name</label>
-                            <InputText @bind-Value="Department.Name" class="form-control"></InputText>
+                            <InputText @bind-Value="GeneralDepartment.Name" class="form-control"></InputText>
                         </div>
                     </div>
                 </div>
@@ -30,8 +28,10 @@
 </SfDialog>
 
 @code {
-    [Parameter] public GeneralDepartment Department { get; set; } = new();
+    [Parameter] public GeneralDepartment GeneralDepartment { get; set; } = new();
+    [Parameter] public EventCallback<GeneralDepartment> HandleSaveOperationEvent { get; set; }
     private bool IsVisible { get; set; } = false;
+    public string Title { get; set; } = "Add";
     public void OpenDialog()
     {
         IsVisible = true;
@@ -40,7 +40,14 @@
 
     async void Save()
     {
-        if (string.IsNullOrEmpty(Department.Name))
+        if (string.IsNullOrEmpty(GeneralDepartment.Name))
             await dialogService.AlertAsync("You need to provide Department name.", "Alert");
+        else
+            await HandleSaveOperationEvent.InvokeAsync(GeneralDepartment);
+    }
+
+    public void ChangeTitle(string title)
+    {
+        Title = title;
     }
 }
