--- a/Client/Pages/ContentPage/DepartmentPages/GeneralDepartmentPage.razor
+++ b/Client/Pages/ContentPage/DepartmentPages/GeneralDepartmentPage.razor
@@ -1,8 +1,7 @@
-﻿@using BaseLibrary.Entities
-@using Client.ApplicationStates
+﻿
 @implements IDisposable
-@inject DepartmentState departmentState
-@if(departmentState.ShowGeneralDepartment)
+
+@if(allState.ShowGeneralDepartment)
 {
     <div class="container mt-5">
         <div class="row">
@@ -52,14 +51,24 @@
         </div>
     </div>
 }
-<GeneralDepartmentDialog @ref="generalDepartmentDialog"></GeneralDepartmentDialog>
+<GeneralDepartmentDialog @ref="generalDepartmentDialog"
+                         HandleSaveOperationEvent="HandleSaveOperationEvent" 
+                         GeneralDepartment="GeneralDepartment" />
 @code {
     GeneralDepartmentDialog? generalDepartmentDialog;
-    GeneralDepartment Department = new();
+    GeneralDepartment GeneralDepartment = new();
+    public string Title { get; set; } = "Add";
+    public List<GeneralDepartment> GeneralDepartments { get; set; } = new();
 
-    protected override void OnInitialized()
+    protected async override Task OnInitializedAsync()
     {
-        departmentState.GeneralDepartmentAction += StateHasChanged;
+        await GetGeneralDepartments();
+        allState.Action += StateHasChanged;
+    }
+
+    private async Task GetGeneralDepartments()
+    {
+        GeneralDepartments = await generalDepartmentService.GetAll(Constants.GeneralDepartmentBaseUrl);
     }
 
     void OpenDialog()
@@ -67,8 +76,50 @@
         generalDepartmentDialog?.OpenDialog();
     }
 
+    private async Task HandleSaveOperationEvent(GeneralDepartment generalDepartment)
+    {
+        bool successCheck = false;
+        if (generalDepartment.Id > 0)
+        {
+            var result = await generalDepartmentService.Update(generalDepartment, Constants.GeneralDepartmentBaseUrl);
+            successCheck = await DisplayMessage(result.Flag, result.Message);
+        }
+        else
+        {
+            var response = await generalDepartmentService.Insert(generalDepartment, Constants.GeneralDepartmentBaseUrl);
+            successCheck = await DisplayMessage(response.Flag, response.Message);
+        }
+        if(successCheck)
+        {
+            GeneralDepartment = new();
+            await GetGeneralDepartments();
+            generalDepartmentDialog?.ChangeTitle("Add");
+        }
+    }
+
+    private void EditClicked(GeneralDepartment dep)
+    {
+        generalDepartmentDialog?.ChangeTitle("Update");
+        GeneralDepartment = dep;
+        OpenDialog();
+    }
+
+    private async Task<bool> DisplayMessage(bool flag, string message)
+    {
+        if(flag)
+        {
+            await dialogService.AlertAsync(message, "Success Operation");
+            return true;
+        }
+        else
+        {
+            await dialogService.AlertAsync(message, "Alert");
+            return false;
+        }
+    }
+
     public void Dispose()
     {
-        departmentState.GeneralDepartmentAction -= StateHasChanged;
+        allState.Action -= StateHasChanged;
     }
 }
